# Ultrasound-imaging

./: .gitignore  CMakeLists.txt  Makefile  README.md  plot_lsm.asv  plot_lsm.m  run_sol.m
data/: defection_defaut_centre_v2.fig  detection_defaut_centre_v1.fig  detection_defaut_haut_v1.fig  detection_plusieurs_defauts_v1.fig  detection_plusieurs_defauts_v2.fig  image_lsm_defaut_centre_bruit_5_percent  petit_defaut_centre_1k_sans_bruit.fig  petit_defaut_centre_plusieurs_k_sans_bruit.fig  resultats_defaut_centre.fig  resultats_defaut_centre_gaussien.fig  resultats_defaut_centre_gaussien_5_percent.fig  resultats_defaut_haut.fig  resultats_entonnoir.fig  resultats_plusieurs_defauts.fig  resultats_sans_defaut.fig  test2_ultrasound_sans.msh  test_ultrasound.geo  test_ultrasound.msh  test_ultrasound_defaut_centre.geo  test_ultrasound_defaut_centre.msh  test_ultrasound_defaut_haut.geo  test_ultrasound_defaut_haut.msh  test_ultrasound_entonnoir.geo  test_ultrasound_entonnoir.msh  test_ultrasound_plusieurs_defauts.geo  test_ultrasound_plusieurs_defauts.msh  test_ultrasound_sans_defaut.geo  test_ultrasound_sans_defaut.msh
include/: fem.hpp  linear_sampling.hpp  math.hpp  mesh.hpp
include/math/: math.hpp
src/: fem.cpp  linear_sampling.cpp  main.cpp  main_temp.cpp  mesh.cpp
test/: Makefile  lsm_image.xyz  mesh_out.m  run_mesh.m  test_fem.cpp  test_linear_sampling.cpp  test_math  test_math.cpp  test_mesh.cpp  test_ultrasound.geo  test_ultrasound.msh
